--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@
 
 #page {
     background-color: aqua;
-    margin-left: 17.5%;
-    margin-right: 17.5%;
-    margin-bottom: 2rem;
+    margin:auto;
     box-shadow: 0.7rem 0.7rem 0.5rem rgba(0, 0, 0, 0.3);
     background-image: linear-gradient(to right, rgba(8, 5, 31, 1), rgba(8, 5, 31, 0.39)), url(abstract3.jpg );
     background-size: cover;
@@ -30,7 +28,7 @@ span {
 .hack {
     display: block;
     animation-name: left;
-    animation-duration: 1s;
+    animation-duration: 2s;
 
     letter-spacing: 0.8rem;
 
@@ -39,7 +37,7 @@ span {
 .od {
     display: block;
     animation-name: right;
-    animation-duration: 1s;
+    animation-duration: 2s;
     letter-spacing: 0.8rem;
 
 }
@@ -183,7 +181,7 @@ button {
     padding: 0.8rem 0.6rem 0.8rem 0.6rem;
     font-size: 1.5rem;
     border-radius: 0.6rem;
-    border-color: #08042c;
+    border-color: rgba(177, 17, 129, 0.1);
     color: aliceblue;
 }
 
